--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1111</width>
+    <width>1109</width>
     <height>806</height>
    </rect>
   </property>
@@ -52,7 +52,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -2390,7 +2390,7 @@
         <rect>
          <x>460</x>
          <y>22</y>
-         <width>141</width>
+         <width>161</width>
          <height>16</height>
         </rect>
        </property>
@@ -2441,10 +2441,20 @@
         </rect>
        </property>
        <property name="text">
-        <string>Ok</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../icons/a6no4gtd5gmn_64.png</normaloff>../icons/a6no4gtd5gmn_64.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>48</width>
+         <height>48</height>
+        </size>
        </property>
        <property name="flat">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_21">
@@ -2473,9 +2483,9 @@
       <widget class="QLabel" name="label_45">
        <property name="geometry">
         <rect>
-         <x>290</x>
+         <x>280</x>
          <y>22</y>
-         <width>51</width>
+         <width>61</width>
          <height>16</height>
         </rect>
        </property>
@@ -2920,7 +2930,7 @@
         <rect>
          <x>460</x>
          <y>22</y>
-         <width>141</width>
+         <width>171</width>
          <height>16</height>
         </rect>
        </property>
@@ -2971,10 +2981,20 @@
         </rect>
        </property>
        <property name="text">
-        <string>Ok</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../icons/a6no4gtd5gmn_64.png</normaloff>../icons/a6no4gtd5gmn_64.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>48</width>
+         <height>48</height>
+        </size>
        </property>
        <property name="flat">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_73">
@@ -3003,9 +3023,9 @@
       <widget class="QLabel" name="label_74">
        <property name="geometry">
         <rect>
-         <x>290</x>
+         <x>280</x>
          <y>22</y>
-         <width>51</width>
+         <width>61</width>
          <height>16</height>
         </rect>
        </property>
@@ -3490,6 +3510,9 @@
        </property>
       </widget>
       <widget class="QPushButton" name="Button_Ok_fin">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="geometry">
         <rect>
          <x>730</x>
@@ -3498,11 +3521,24 @@
          <height>61</height>
         </rect>
        </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
        <property name="text">
-        <string>Ok</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../icons/a6no4gtd5gmn_64.png</normaloff>../icons/a6no4gtd5gmn_64.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>48</width>
+         <height>48</height>
+        </size>
        </property>
        <property name="flat">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_42">
@@ -8019,7 +8055,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1111</width>
+     <width>1109</width>
      <height>21</height>
     </rect>
    </property>
