проверка жеребьевки сетки

--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -4655,15 +4655,15 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>5</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5291,8 +5291,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
@@ -6173,8 +6173,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
@@ -6474,8 +6474,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
@@ -6929,14 +6929,50 @@
        <string>Встречи не разигрываются</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="Button_check_net">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>437</y>
+        <width>191</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Проверка  сетки</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_check_net">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>438</y>
+        <width>21</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="page_8">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
@@ -7306,8 +7342,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>241</width>
+       <height>459</height>
       </rect>
      </property>
      <attribute name="label">
