--- a/UI/start_form.ui
+++ b/UI/start_form.ui
@@ -184,7 +184,7 @@
     </rect>
    </property>
    <property name="value">
-    <number>24</number>
+    <number>0</number>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
@@ -291,7 +291,7 @@
     <string>Период</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>213</x>
